--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "editor.quickSuggestions": {
     "strings": true
-  }
+  },
+  "javascript.preferences.importModuleSpecifier": "non-relative"
 }
